--- a/playbooks/aws/openshift-cluster/launch.yml
+++ b/playbooks/aws/openshift-cluster/launch.yml
@@ -5,6 +5,7 @@
   gather_facts: no
   vars_files:
   - vars.yml
+  - ["vars.{{ deployment_type }}.{{ cluster_id }}.yml", vars.defaults.yml]
   tasks:
   - fail:
       msg: Deployment type not supported for aws provider yet
