--- a/playbooks/aws/openshift-cluster/vars.yml
+++ b/playbooks/aws/openshift-cluster/vars.yml
@@ -3,6 +3,7 @@ deployment_vars:
   origin:
     # fedora, since centos requires marketplace
     image: ami-acd999c4
+    image_name:
     region: us-east-1
     ssh_user: fedora
     sudo: yes
@@ -13,18 +14,20 @@ deployment_vars:
     assign_public_ip:
   online:
     # private ami
-    image: ami-906240f8
+    image: ami-7a9e9812
+    image_name: openshift-rhel7_*
     region: us-east-1
     ssh_user: root
     sudo: no
-    keypair: mmcgrath_libra
+    keypair: libra
     type: m3.large
-    security_groups: [ 'int-v3' ]
-    vpc_subnet: subnet-987c0def
-    assign_public_ip: yes
+    security_groups: [ 'public' ]
+    vpc_subnet:
+    assign_public_ip:
   enterprise:
     # rhel-7.1, requires cloud access subscription
     image: ami-10663b78
+    image_name:
     region: us-east-1
     ssh_user: ec2-user
     sudo: yes
