Add vagrantfile and minor bugfixes
- Add Vagrantfile for configuring a basic cluster
- Add an initial readme for using vagrant
- explicitly set connection: local and sudo: false for localhost actions in
  playbooks/common/openshift-node/config.yml
- Fix permissions issue with openshift config file for non-root user

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -104,3 +104,14 @@
   with_items:
   - root
   - "{{ ansible_ssh_user }}"
+
+- name: Update the permissions on the OpenShift client config(s)
+  file:
+    path: "~{{ item }}/.config/openshift/.config"
+    state: file
+    mode: 0700
+    owner: "{{ item }}"
+    group: "{{ item }}"
+  with_items:
+  - root
+  - "{{ ansible_ssh_user }}"
