--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -28,6 +28,8 @@
 
 - name: Create temp directory for syncing certs
   hosts: localhost
+  connection: local
+  sudo: false
   gather_facts: no
   tasks:
   - name: Create local temp directory for syncing certs
@@ -112,6 +114,8 @@
 
 - name: Delete temporary directory on localhost
   hosts: localhost
+  connection: local
+  sudo: false
   gather_facts: no
   tasks:
   - file: name={{ mktemp.stdout }} state=absent
