--- a/roles/openshift_ansible_inventory/tasks/main.yml
+++ b/roles/openshift_ansible_inventory/tasks/main.yml
@@ -29,3 +29,17 @@
     backrefs: yes
     regexp: '^(hostfile|inventory)( *)='
     line: '\1\2= /etc/ansible/inventory'
+
+- name: setting ec2.ini destination_format
+  lineinfile:
+    dest: /usr/share/ansible/inventory/aws/ec2.ini
+    regexp: '^destination_format *='
+    line: "destination_format = {{ oo_ec2_destination_format }}"
+  when: oo_ec2_destination_format is defined
+
+- name: setting ec2.ini destination_format_tags
+  lineinfile:
+    dest: /usr/share/ansible/inventory/aws/ec2.ini
+    regexp: '^destination_format_tags *='
+    line: "destination_format_tags = {{ oo_ec2_destination_format_tags }}"
+  when: oo_ec2_destination_format_tags is defined
