Accomodate upstream configuration change
 - Master config and certificates are now in /etc/openshift/master
 - Node config is now in /etc/openshift/node
 - Several certificates have been renamed to accomodate a flattening of
   structure to accomodate secret storage

--- a/roles/openshift_register_nodes/tasks/main.yml
+++ b/roles/openshift_register_nodes/tasks/main.yml
@@ -19,7 +19,7 @@
 - name: Create node config
   command: >
     /usr/bin/openshift admin create-node-config
-      --node-dir={{ openshift_cert_dir }}/node-{{ item.openshift.common.hostname }}
+      --node-dir={{ openshift_master_config_dir }}/node-{{ item.openshift.common.hostname }}
       --node={{ item.openshift.common.hostname }}
       --hostnames={{ [item.openshift.common.hostname, item.openshift.common.public_hostname]|unique|join(",") }}
       --dns-domain={{ openshift.dns.domain }}
@@ -28,13 +28,13 @@
       --signer-key={{ openshift_master_ca_key }}
       --signer-cert={{ openshift_master_ca_cert }}
       --certificate-authority={{ openshift_master_ca_cert }}
-      --signer-serial={{ openshift_master_ca_dir }}/serial.txt
+      --signer-serial={{ openshift_master_config_dir }}/ca.serial.txt
       --node-client-certificate-authority={{ openshift_master_ca_cert }}
       {{ ('--images=' ~ openshift_registry_url) if openshift_registry_url is defined else '' }}
       --listen=https://0.0.0.0:10250
   args:
-    chdir: "{{ openshift_cert_parent_dir }}"
-    creates: "{{ openshift_cert_dir }}/node-{{ item.openshift.common.hostname }}"
+    chdir: "{{ openshift_master_config_dir }}"
+    creates: "{{ openshift_master_config_dir }}/node-{{ item.openshift.common.hostname }}"
   with_items: openshift_nodes
 
 - name: Register unregistered nodes
