--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -54,11 +54,13 @@
     openshift_registry_url: "docker-registry.ops.rhcloud.com/openshift3_beta/ose-${component}:${version}"
   when: openshift.common.deployment_type == 'online' and openshift_registry_url is not defined
 
+# TODO: Need to get a flag added for volumes path, i think it'll get put in
 - name: Create master config
   command: >
     /usr/bin/openshift start master
     --write-config={{ openshift_master_config_dir }}
     --portal-net={{ openshift.master.portal_net }}
+    --etcd-dir={{ openshift_data_dir }}/openshift.local.etcd
     --master={{ openshift.master.api_url }}
     --public-master={{ openshift.master.public_api_url }}
     --listen={{ 'https' if openshift.master.api_use_ssl else 'http' }}://0.0.0.0:{{ openshift.master.api_port }}
