--- a/roles/openshift_register_nodes/tasks/main.yml
+++ b/roles/openshift_register_nodes/tasks/main.yml
@@ -32,6 +32,7 @@
       --node-client-certificate-authority={{ openshift_master_ca_cert }}
       {{ ('--images=' ~ openshift_registry_url) if openshift_registry_url is defined else '' }}
       --listen=https://0.0.0.0:10250
+      --volume-dir={{ openshift_data_dir }}/openshift.local.volumes
   args:
     chdir: "{{ openshift_master_config_dir }}"
     creates: "{{ openshift_master_config_dir }}/node-{{ item.openshift.common.hostname }}"
