--- a/roles/ansible_tower_cli/tasks/main.yml
+++ b/roles/ansible_tower_cli/tasks/main.yml
@@ -1,3 +1,11 @@
 ---
 - name: Install python-ansible-tower-cli
   yum: name=python-ansible-tower-cli
+
+- template:
+    src: tower_cli.cfg.j2
+    dest: /etc/tower/tower_cli.cfg
+    owner: awx
+    group: awx
+    mode: 0640
+
