symlink added for ansible-tower-cli. Also fix to spacing issue for proot options

--- a/roles/ansible_tower/tasks/main.yaml
+++ b/roles/ansible_tower/tasks/main.yaml
@@ -36,7 +36,7 @@
     dest: /etc/tower/settings.py
     backrefs: yes
     regexp: "^({{ item.option }})( *)="
-    line: '\1\2 = {{ item.value }}'
-  with_items: config_changes | default([])
+    line: '\1\2= {{ item.value }}'
+  with_items: config_changes | default([], true)
     
 
