--- a/roles/ansible_tower_cli/tasks/main.yml
+++ b/roles/ansible_tower_cli/tasks/main.yml
@@ -9,3 +9,10 @@
     group: awx
     mode: 0640
 
+- file:
+    state: link
+    src: /etc/tower
+    dest: /etc/awx
+    owner: awx
+    group: awx
+
