--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -51,12 +51,12 @@
 # TODO: recreate config if values change
 - name: Use enterprise default for openshift_registry_url if not set
   set_fact:
-    openshift_registry_url: "openshift3_beta/ose-${component}:${version}"
+    openshift_registry_url: "openshift3_beta/ose-{{component}}:{{version}}"
   when: openshift.common.deployment_type == 'enterprise' and openshift_registry_url is not defined
 
 - name: Use online default for openshift_registry_url if not set
   set_fact:
-    openshift_registry_url: "docker-registry.ops.rhcloud.com/openshift3_beta/ose-${component}:${version}"
+    openshift_registry_url: "docker-registry.ops.rhcloud.com/openshift3_beta/ose-{{component}}:{{version}}"
   when: openshift.common.deployment_type == 'online' and openshift_registry_url is not defined
 
 - name: Create master config
