--- a/playbooks/os/openshift-cluster/vars.yml
+++ b/playbooks/os/openshift-cluster/vars.yml
@@ -5,7 +5,7 @@ openstack_network_external_net: external
 openstack_network_dns:
   - 8.8.8.8
   - 8.8.4.4
-openstack_ssh_keypair: "{{ lookup('env', 'LOGNAME') }}_key"
+openstack_ssh_keypair: "Rbox_UHA"
 openstack_flavor_ram: 2048
 
 deployment_vars:
@@ -14,11 +14,13 @@ deployment_vars:
 #      url: "http://cloud.centos.org/centos/7/images/CentOS-7-x86_64-GenericCloud.qcow2"
 #      name: CentOS-7-x86_64-GenericCloud.qcow2
 #      name: CentOS-7-x86_64-GenericCloud.openshift-gtf-2.raw
-      name: centos-70-raw
+#      name: centos-70-raw
+      name: centos-70-utd
 #      name: CentOS-7-x86_64-GenericCloud.raw
 #      sha256: e324e3ab1d24a1bbf035ddb365e7f9058c0b454acf48d7aa15c5519fae5998ab
 #     ssh_user: openshift
     ssh_user: openshift
+    ansible_ssh_private_key_file: /home/john/.ssh/rbox_uha.pem 
     sudo: yes
   online:
     image:
