--- a/roles/openshift_sdn_node/tasks/main.yml
+++ b/roles/openshift_sdn_node/tasks/main.yml
@@ -49,7 +49,7 @@
   lineinfile:
     dest: /etc/sysconfig/docker
     regexp: INSECURE_REGISTRY=
-    line: INSECURE_REGISTRY='--insecure-registry=0.0.0.0/0'
+    line: INSECURE_REGISTRY='--insecure-registry=10.64.109.209:5000'
   notify: restart openshift-sdn-node
 
 
