--- a/playbooks/os/openshift-cluster/tasks/configure_openstack_network.yml
+++ b/playbooks/os/openshift-cluster/tasks/configure_openstack_network.yml
@@ -61,9 +61,9 @@
   when: security_group_show_result.rc == 1
 
 - name: Open Local ESB port
-  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 20000 --port-range-max 20000 --remote-group-id {{ openstack_network_prefix }}-secgrp {{ openstack_network_prefix }}-secgrp'
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 20000 --port-range-max 20000 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
   when: security_group_show_result.rc == 1
 
 - name: Open Openshift GUI port
-  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 8443 --port-range-max 8443 --remote-group-id {{ openstack_network_prefix }}-secgrp {{ openstack_network_prefix }}-secgrp'
+  command: 'neutron security-group-rule-create --protocol TCP --port-range-min 8443 --port-range-max 8443 --remote-ip-prefix 0.0.0.0/0 {{ openstack_network_prefix }}-secgrp'
   when: security_group_show_result.rc == 1
