--- a/playbooks/aws/openshift-cluster/vars.yml
+++ b/playbooks/aws/openshift-cluster/vars.yml
@@ -8,7 +8,9 @@ deployment_vars:
     ssh_user: fedora
     sudo: yes
     keypair: libra
-    type: m3.large
+    master_type: m3.large
+    node_type: m3.large
+    infra_type: m3.large
     security_groups: [ 'public' ]
     vpc_subnet:
     assign_public_ip:
@@ -20,7 +22,9 @@ deployment_vars:
     ssh_user: root
     sudo: no
     keypair: libra
-    type: m3.large
+    master_type: m3.large
+    node_type: m3.large
+    infra_type: m3.large
     security_groups: [ 'public' ]
     vpc_subnet:
     assign_public_ip:
@@ -32,7 +36,9 @@ deployment_vars:
     ssh_user: ec2-user
     sudo: yes
     keypair: libra
-    type: m3.large
+    master_type: m3.large
+    node_type: m3.large
+    infra_type: m3.large
     security_groups: [ 'public' ]
     vpc_subnet:
     assign_public_ip:
