--- a/playbooks/aws/openshift-cluster/vars.online.int.yml
+++ b/playbooks/aws/openshift-cluster/vars.online.int.yml
@@ -3,7 +3,9 @@ ec2_image: ami-906240f8
 ec2_image_name: libra-ops-rhel7*
 ec2_region: us-east-1
 ec2_keypair: mmcgrath_libra
-ec2_instance_type: m3.large
+ec2_master_instance_type: m3.large
+ec2_node_instance_type: m3.large
+ec2_infra_instance_type: m3.large
 ec2_security_groups: [ 'int-v3' ]
 ec2_vpc_subnet: subnet-987c0def
 ec2_assign_public_ip: yes
