--- a/roles/openshift_label_nodes/tasks/main.yml
+++ b/roles/openshift_label_nodes/tasks/main.yml
@@ -5,12 +5,12 @@
 
 - name: Set node regions
     node_facts: "{{ output.stdout | from_json
-                  | oo_set_node_label('region', {{ocn_node_region}}) }}"
+                  | oo_set_node_label('region', {{oln_node_region}}) }}"
 
 - name: Set infra node labels
   set_fact:
-    node_final_facts: "{{ output.stdout | from_json
-                  | oo_set_node_label('region', {{ocn_infra_node_label}}, {{ocn_infra_node_filter_key}}, {{ocn_infra_node_filter_value}}) }}"
+    node_final_facts: "{{ node_facts
+                  | oo_set_node_label('region', {{ocom_infra_node_label}}, {{oln_infra_node_filter_key}}, {{oln_infra_node_filter_value}}) }}"
 
 - name: Write node config to temp file
   copy:
