--- a/playbooks/common/openshift-master/post_config.yml
+++ b/playbooks/common/openshift-master/post_config.yml
@@ -2,4 +2,6 @@
 - name: Configure Node Labels
   hosts: oo_masters_to_config
   roles:
-  - openshift_label_nodes
+    - openshift_label_nodes
+    - openshift_deploy_registry
+    - openshift_deploy_router
